# aiv-protocol

./: .cursorrules  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  FILE_PACKET_MAP.json  FILE_PACKET_MAP.md  LICENSE  NOTICE  README.md  SPECIFICATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/aiv-evidence/: EVIDENCE_.GITHUB_WORKFLOWS_CI.YML.md  EVIDENCE_.GITIGNORE.md  EVIDENCE_CLI_MAIN.md  EVIDENCE_DOCS_EXTERNAL_READINESS_AUDIT.MD.md  EVIDENCE_GUARD_RUNNER.md  EVIDENCE_HOOKS_PRE_COMMIT.md  EVIDENCE_HOOKS_PRE_PUSH.md  EVIDENCE_LIB_AUDITOR.md  EVIDENCE_LIB_CHANGE.md  EVIDENCE_LIB_CONFIG.md  EVIDENCE_LIB_EVIDENCE_COLLECTOR.md  EVIDENCE_LIB_LANGUAGE_DRIVERS_PROTOCOL.md  EVIDENCE_LIB_LANGUAGE_DRIVERS_PYTHON_DRIVER.md  EVIDENCE_LIB_LANGUAGE_DRIVERS_REGISTRY.md  EVIDENCE_LIB_LANGUAGE_DRIVERS_TREESITTER_DRIVER.md  EVIDENCE_LIB_LANGUAGE_DRIVERS___INIT__.md  EVIDENCE_LIB_PARSER.md  EVIDENCE_LIB_VALIDATORS_ANTI_CHEAT.md  EVIDENCE_PYPROJECT.TOML.md  EVIDENCE_README.MD.md  EVIDENCE_SVP_CLI_MAIN.md  EVIDENCE_TESTS_UNIT_TEST_AUDITOR.md  EVIDENCE_TESTS_UNIT_TEST_CHANGE.md  EVIDENCE_TESTS_UNIT_TEST_CLI_INIT.md  EVIDENCE_TESTS_UNIT_TEST_EVIDENCE_COLLECTOR.md  EVIDENCE_TESTS_UNIT_TEST_LANGUAGE_DRIVERS.md  EVIDENCE_TESTS_UNIT_TEST_PARSER.md  EVIDENCE_TESTS_UNIT_TEST_PRE_COMMIT_HOOK.md  EVIDENCE_TESTS_UNIT_TEST_PRE_PUSH_HOOK.md  EVIDENCE_TESTS_UNIT_TEST_VALIDATORS.md
.github/aiv-packets/: PACKET_anti_theater.md  PACKET_anti_theater_enforcement.md  PACKET_audit_claim_checks.md  PACKET_auditor_evidence.md  PACKET_ci_fix.md  PACKET_ci_fixes.md  PACKET_critical_audit_fixes.md  PACKET_external_readiness_polyglot.md  PACKET_format_fix.md  PACKET_guard_v22_compat.md  PACKET_integration_fixes.md  PACKET_llm_readiness.md  PACKET_polyglot_evidence_collection.md  PACKET_prepush_fix.md  PACKET_readme_readiness.md  PACKET_readme_update.md  PACKET_remove_force_gate.md  PACKET_smoke_test.md  PACKET_smoke_test_fixes.md  PACKET_two_layer_architecture.md  VERIFICATION_PACKET_AIV_AUDIT_FIXES.md  VERIFICATION_PACKET_AIV_GUARD.md  VERIFICATION_PACKET_AIV_IMPLEMENTATION.md  VERIFICATION_PACKET_AIV_INIT.md  VERIFICATION_PACKET_ANALYZERS_INIT.md  VERIFICATION_PACKET_ANTICHEAT_DELETED_FILE_REGEX.md  VERIFICATION_PACKET_ANTICHEAT_FIX.md  VERIFICATION_PACKET_ANTI_CHEAT.md  VERIFICATION_PACKET_AUDITOR.md  VERIFICATION_PACKET_AUDITOR_FALSE_POSITIVE_FIX.md  VERIFICATION_PACKET_AUDITOR_TESTS.md  VERIFICATION_PACKET_AUDITOR_TEST_REFINEMENT.md  VERIFICATION_PACKET_AUDIT_CLI_COMMAND.md  VERIFICATION_PACKET_BASE_CLEANUP.md  VERIFICATION_PACKET_CI.md  VERIFICATION_PACKET_CI_LINT_FORMAT.md  VERIFICATION_PACKET_CLASSIFICATION.md  VERIFICATION_PACKET_CLI_CLEANUP.md  VERIFICATION_PACKET_CLI_HELP_TEXT.md  VERIFICATION_PACKET_CLI_INIT.md  (+101 more)
.github/workflows/: aiv-guard-python.yml  aiv-guard.yml  ci.yml  verify-architecture.yml
.husky/: pre-commit
.svp/: AI_FIRST_PASS_STRATEGIC_ANALYSIS.md  AUDIT_AI_FIRST_PASS.md  ratings.json  session-pr1.json  session-pr2.json  session-pr3.json
.svp/legacy/: session-pr1-v1-initial-impl.json
.windsurf/workflows/: aiv-commit.md
docs/: AIV_SVP_PROTOCOL_USER_STORY.md  CLAIM_AWARE_EVIDENCE_PLAN.md  ERROR_CODES.md  EXTERNAL_READINESS_AUDIT.md  TWO_LAYER_VERIFICATION_ARCHITECTURE.md
docs/specs/: AIV-SUITE-SPEC-V1.0-CANONICAL_2025-12-19.md  E2E_COMPLIANCE_TEST_SUITE_SPEC.md  SVP-SUITE-SPEC-V1.0-CANONICAL-2025-12-20.md
scripts/: map_packets.py  migrate_two_layer.py
src/aiv/: __init__.py  __main__.py
src/aiv/cli/: __init__.py  main.py
src/aiv/guard/: __init__.py  __main__.py  canonical.py  github_api.py  manifest.py  models.py  runner.py  security.py
src/aiv/hooks/: __init__.py  pre_commit.py  pre_push.py
src/aiv/lib/: __init__.py  auditor.py  change.py  config.py  errors.py  evidence_collector.py  models.py  parser.py
src/aiv/lib/analyzers/: __init__.py  diff.py
src/aiv/lib/language_drivers/: __init__.py  protocol.py  python_driver.py  registry.py  treesitter_driver.py
src/aiv/lib/validators/: __init__.py  anti_cheat.py  base.py  evidence.py  exceptions.py  links.py  pipeline.py  structure.py  zero_touch.py
src/aiv/svp/: __init__.py
src/aiv/svp/cli/: main.py
src/svp/cli/: __init__.py
src/svp/lib/: __init__.py  models.py
tests/: conftest.py
tests/integration/: test_e2e_compliance.py  test_full_workflow.py  test_svp_full_workflow.py
tests/unit/: test_auditor.py  test_change.py  test_cli_commit_skip.py  test_cli_init.py  test_coverage.py  test_evidence_collector.py  test_guard.py  test_language_drivers.py  test_models.py  test_parser.py  test_pre_commit_hook.py  test_pre_push_hook.py  test_svp.py  test_validators.py
(+4 files in other folders)
