[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiv-protocol"
version = "1.0.0"
description = "Auditable Verification Standard for AI-Assisted Code Changes"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "ImmortalDemonGod" },
]
keywords = ["verification", "ai", "code-review", "evidence", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-xdist>=3.0,<4.0",
    "pytest-cov>=4.0,<6.0",
    "mypy>=1.0,<2.0",
    "ruff>=0.1,<1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
aiv = "aiv.cli.main:app"

[project.urls]
Homepage = "https://github.com/ImmortalDemonGod/aiv-protocol"
Documentation = "https://github.com/ImmortalDemonGod/aiv-protocol"
Repository = "https://github.com/ImmortalDemonGod/aiv-protocol"
Issues = "https://github.com/ImmortalDemonGod/aiv-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aiv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["aiv.guard.*", "aiv.lib.validators.pipeline"]
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = [
    "B008",    # function-call-in-default-argument (Typer uses this by design)
    "SIM102",  # collapsible-if (readability preference)
    "SIM108",  # if-else-block-instead-of-if-exp (readability preference)
    "SIM110",  # reimplemented-builtin (explicit loops are clearer)
    "SIM222",  # expr-or-true (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "E402", "E501", "W293"]
